<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#474747">

    <EditText
        android:id="@+id/teamNum"
        android:layout_width="271dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="#242424"
        android:text="@string/team_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/blue1"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#170cf0"
        android:text="@string/blue_1"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginStart="240dp"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/blue2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#170cf0"
        android:text="@string/blue_2"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginStart="240dp"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/blue3"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#170cf0"
        android:text="@string/blue_3"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginStart="240dp"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/red1"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#ff0000"
        android:text="@string/red_1"
        android:textSize="30sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-383dp" />

    <Button
        android:id="@+id/red2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#ff0000"
        android:text="@string/red_2"
        android:textSize="30sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/red3"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#ff0000"
        android:text="@string/red_3"
        android:textSize="30sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/enter"
        android:layout_width="140dp"
        android:layout_height="99dp"
        android:text="@string/enter"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="-509dp"
        android:layout_marginStart="271dp"/>

</LinearLayout>
